# web

./: .gitignore  .pr_agent.toml  .pre-commit-config.yaml  Containerfile  Dockerfile  LICENSE  README.md  compose.yaml  entrypoint.sh  pyproject.toml  start_api.sh  tmt-web.yaml
.github/workflows/: pre-commit.yml  test.yml
requirements/: automilos_execution.fmf  clickable_link.fmf  form.fmf  link_existing_test.fmf  link_new_test.fmf
src/: Dockerfile  api.py  html_generator.py  requirements.txt  service.py  start_api.sh
src/generators/: html_generator.py  json_generator.py  yaml_generator.py
src/tmt_web/: api.py  converters.py  formatters.py  models.py  service.py  settings.py
src/tmt_web/generators/: html_generator.py  json_generator.py  yaml_generator.py
src/tmt_web/generators/templates/: _base.html.j2  status_callback.html.j2  testandplan.html.j2  testorplan.html.j2
src/tmt_web/templates/: _base.html.j2  status_callback.html.j2  testandplan.html.j2  testorplan.html.j2
src/tmt_web/utils/: git_handler.py  task_manager.py
src/utils/: git_handler.py
stories/: automilos.fmf  clickable_link.fmf  form.fmf  link.fmf  link_test.fmf  output.fmf  tie.fmf
tests/: test_api.py
tests/integration/: test_api.py
tests/objects/: sample_plan.fmf
tests/unit/: test_converters.py  test_formatters.py  test_git_handler.py  test_html_generator.py  test_json_generator.py  test_service.py  test_yaml_generator.py
